--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <title>Walkthrough</title>
     <script id="sap-ui-bootstrap" src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js" data-sap-ui-theme="sap_belize" data-sap-ui-libs="sap.m" data-sap-ui-compatVersion="edge" data-sap-ui-preload="async" data-sap-ui-resourceroots='{
-			"sap.ui5.demo.workthrough": "./"
+			"sap.ui5.demo.walkthrough": "./sap/ui5/demo/walkthrough"
 		}'>
     </script>
     <script>
         sap.ui.getCore().attachInit(function() {
             new sap.m.Shell({
                 app: new sap.ui.core.ComponentContainer({
-                    name: "sap.ui5.demo.workthrough"
+                    name: "sap.ui5.demo.walkthrough"
                 })
             }).placeAt("content");
         });
