--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <title>Walkthrough</title>
+    <title>ui5-workthrough</title>
     <script id="sap-ui-bootstrap" src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js" data-sap-ui-theme="sap_belize" data-sap-ui-libs="sap.m" data-sap-ui-compatVersion="edge" data-sap-ui-preload="async" data-sap-ui-resourceroots='{
 			"sap.ui5.demo.walkthrough": "./sap/ui5/demo/walkthrough"
 		}'>
