--- a/src/test/integration/opaTests.qunit.html
+++ b/src/test/integration/opaTests.qunit.html
@@ -8,7 +8,7 @@
 	<script id="sap-ui-bootstrap"
 			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
-			"sap.ui5.demo.walkthrough.test.integration": "./",
+			"org.fornever.ui5demo.test.integration": "./",
 			"sap.ui.demo.app.test" : "../mockServer"
 		}'>
 	</script>
@@ -21,10 +21,10 @@
 		jQuery.sap.require("sap.ui.test.Opa5");
 
 		// pages
-		jQuery.sap.require("sap.ui5.demo.walkthrough.test.integration.pages.App");
+		jQuery.sap.require("org.fornever.ui5demo.test.integration.pages.App");
 
 		// journeys
-		jQuery.sap.require("sap.ui5.demo.walkthrough.test.integration.navigationJourney");
+		jQuery.sap.require("org.fornever.ui5demo.test.integration.navigationJourney");
 	</script>
 
 </head>
