--- a/src/test/mockServer.html
+++ b/src/test/mockServer.html
@@ -12,20 +12,20 @@
 		data-sap-ui-compatVersion="edge"
 		data-sap-ui-preload="async"
 		data-sap-ui-resourceroots='{
-			"sap.ui5.demo.walkthrough": "../"
+			"org.fornever.ui5demo": "../"
 		}'>
 	</script>
 	<script>
 		sap.ui.getCore().attachInit(function () {
 			sap.ui.require([
-				"sap/ui5/demo/walkthrough/localService/mockserver",
+				"org/fornever/ui5demo/localService/mockserver",
 				"sap/m/Shell",
 				"sap/ui/core/ComponentContainer"
 			], function (mockserver, Shell, ComponentContainer) {
 				mockserver.init();
 				new Shell({
 					app: new ComponentContainer({
-						name: "sap.ui5.demo.walkthrough"
+						name: "org.fornever.ui5demo"
 					})
 				}).placeAt("content");
 			});
