--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <title>
-        ui5-workthrough
+        ss03
     </title>
     <script id="sap-ui-bootstrap" src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js" data-sap-ui-theme="sap_belize"
         data-sap-ui-libs="sap.m" data-sap-ui-compatVersion="edge" data-sap-ui-preload="async" data-sap-ui-resourceroots='{
-			"org.fornever.ui5demo": "."
+			"ui.views.ss": "."
 		}'>
         </script>
     <script src="./index.js"></script>
