--- a/src/test/unit/unitTests.qunit.html
+++ b/src/test/unit/unitTests.qunit.html
@@ -8,7 +8,7 @@
 	<script id="sap-ui-bootstrap"
 			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
-			"org.fornever.ui5demo": "../../",
+			"ui.views.ss": "../../",
 			"test.unit": "./"
 		}'>
 	</script>
